Fix CI issues and cleanup
- Fix missing import in build_configure.py
- Remove test skip conditions (tests run after fetch)
- Add repository override to external source checkout
- Checkout external source in setup.yml with fetch-depth: 2
- Update configure_ci.py to diff external source directory
- Reorder run() in fetch_sources.py to match origin/main
- Restore Python package comments in ci workflows

--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -90,7 +90,7 @@ jobs:
     name: Test Artifacts
     # If the dependent job failed/cancelled, this job will not be run
     # The use_prebuilt_artifacts "or" statement ensures that tests will run if
-    # previous build step is run or skipped.
+    # previous build step is run or skipped.concurrency.
     # If we are expecting a build failure, do not run tests to save machine capacity
     if: >-
       ${{
@@ -143,6 +143,10 @@ jobs:
   build_portable_linux_python_packages:
     needs: [build_portable_linux_artifacts]
     name: Build Python
+    # If the dependent job failed/cancelled, this job will not be run
+    # The use_prebuilt_artifacts "or" statement ensures that tests will run if
+    # previous build step is run or skipped.concurrency.
+    # Skip for external repos (they don't need Python packages)
     if: >-
       ${{
         !failure() &&
