--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -111,6 +111,7 @@ jobs:
         if: ${{ inputs.external_source_checkout }}
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
+          repository: ${{ inputs.repository_override || github.repository }}
           path: .external-source-temp
 
       # safe.directory must be set before Runner Health Status
