--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -143,6 +143,10 @@ jobs:
   build_windows_python_packages:
     needs: [build_windows_artifacts]
     name: Build Python
+    # If the dependent job failed/cancelled, this job will not be run
+    # The use_prebuilt_artifacts "or" statement ensures that tests will run if
+    # previous build step is run or skipped.concurrency.
+    # Skip for external repos (they don't need Python packages)
     if: >-
       ${{
         !failure() &&
