--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -97,6 +97,14 @@ jobs:
           ref: ${{ inputs.therock_ref || github.ref }}
           fetch-depth: 2
 
+      - name: Checkout external source repository
+        if: ${{ inputs.external_source_checkout }}
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        with:
+          repository: ${{ inputs.repository_override || github.repository }}
+          path: .external-source-temp
+          fetch-depth: 2
+
       - name: Set PR_LABELS variable with labels assigned to pull request
         if: ${{ github.event.pull_request }}
         env:
