--- a/.github/workflows/ci_nightly.yml
+++ b/.github/workflows/ci_nightly.yml
@@ -75,6 +75,7 @@ jobs:
       artifact_group: ${{ matrix.variant.artifact_group }}
       test_runs_on: ${{ matrix.variant.test-runs-on }}
       benchmark_runs_on: ${{ matrix.variant.benchmark-runs-on }}
+      run_extended_functional: true
       build_variant_label: ${{ matrix.variant.build_variant_label }}
       build_variant_suffix: ${{ matrix.variant.build_variant_suffix }}
       build_variant_cmake_preset: ${{ matrix.variant.build_variant_cmake_preset }}
@@ -108,6 +109,7 @@ jobs:
       artifact_group: ${{ matrix.variant.artifact_group }}
       test_runs_on: ${{ matrix.variant.test-runs-on }}
       benchmark_runs_on: ${{ matrix.variant.benchmark-runs-on }}
+      run_extended_functional: true
       build_variant_label: ${{ matrix.variant.build_variant_label }}
       build_variant_suffix: ${{ matrix.variant.build_variant_suffix }}
       build_variant_cmake_preset: ${{ matrix.variant.build_variant_cmake_preset }}
