Add origami to package.json

--- a/build_tools/packaging/linux/package.json
+++ b/build_tools/packaging/linux/package.json
@@ -459,7 +459,14 @@
               "doc"
             ]
           },
-
+          {
+            "Name": "Origami",
+            "Components": [
+              "lib",
+              "run",
+              "doc"
+            ]
+          },
           {
             "Name": "hipBLASLt",
             "Components": [
