--- a/.github/workflows/test_linux_jax_wheels.yml
+++ b/.github/workflows/test_linux_jax_wheels.yml
@@ -117,6 +117,8 @@ jobs:
           --group-add video
           --user root
           --env-file /etc/podinfo/gha-gpu-isolation-settings
+          --dns 8.8.8.8
+          --dns 8.8.4.4
     defaults:
       run:
         shell: bash
