--- a/.github/workflows/test_extended_functional_tests.yml
+++ b/.github/workflows/test_extended_functional_tests.yml
@@ -1,35 +1,43 @@
-name: Test Extended Functional
+name: Run Extended Functional Tests
 
 on:
   workflow_dispatch:
     inputs:
       artifact_group:
+        description: 'Build artifact group to test (e.g., gfx94X-dcgpu, gfx101X-dgpu, gfx1151, gfx120X-all)'
         type: string
       artifact_run_id:
+        description: 'GitHub Actions run ID where artifacts were built (empty to use current run)'
         type: string
         default: ""
       amdgpu_families:
+        description: 'Comma-separated list of AMD GPU families to test (e.g., gfx908, gfx90a, gfx942)'
         type: string
       test_runs_on:
+        description: 'GitHub Actions runner label for the test machine'
         type: string
   workflow_call:
     inputs:
       artifact_group:
+        description: 'Build artifact group to test (e.g., gfx94X-dcgpu, gfx101X-dgpu, gfx1151, gfx120X-all)'
         type: string
       artifact_run_id:
+        description: 'GitHub Actions run ID where artifacts were built (empty to use current run)'
         type: string
         default: ""
       amdgpu_families:
+        description: 'Comma-separated list of AMD GPU families to test (e.g., gfx908, gfx90a, gfx942)'
         type: string
       test_runs_on:
+        description: 'GitHub Actions runner label for the test machine'
         type: string
 
 permissions:
   contents: read
 
 jobs:
-  configure_extended_functional_matrix:
-    name: "Configure extended functional matrix"
+  configure_test_matrix:
+    name: "Configure extended functional test matrix"
     # if there is a test machine available
     if: ${{ inputs.test_runs_on != '' }}
     runs-on: ${{ inputs.test_runs_on }}
@@ -59,7 +67,7 @@ jobs:
         with:
           python-version: 3.12
 
-      - name: "Configuring extended functional options"
+      - name: "Configuring test options"
         id: configure
         env:
           ARTIFACT_GROUP: ${{ inputs.artifact_group }}
@@ -67,21 +75,21 @@ jobs:
           IS_EXTENDED_FUNCTIONAL_WORKFLOW: "true"
         run: python ./build_tools/github_actions/fetch_test_configurations.py
 
-  run_extended_functional:
-    name: 'Extended Functional ${{ matrix.components.job_name }}'
-    needs: [configure_extended_functional_matrix]
-    # skip extended functional tests if no extended functional matrix to run
-    if: ${{ needs.configure_extended_functional_matrix.outputs.components != '[]' }}
+  run_tests:
+    name: 'Test ${{ matrix.components.job_name }}'
+    needs: [configure_test_matrix]
+    # skip tests if no test matrix to run
+    if: ${{ needs.configure_test_matrix.outputs.components != '[]' }}
     strategy:
       fail-fast: false
       matrix:
-        components: ${{ fromJSON(needs.configure_extended_functional_matrix.outputs.components) }}
-    uses: './.github/workflows/test_component.yml'
+        components: ${{ fromJSON(needs.configure_test_matrix.outputs.components) }}
+    uses: ./.github/workflows/test_component.yml
     secrets: inherit
     with:
       artifact_run_id: ${{ inputs.artifact_run_id }}
       artifact_group: ${{ inputs.artifact_group }}
       amdgpu_families: ${{ inputs.amdgpu_families }}
       test_runs_on: ${{ inputs.test_runs_on }}
-      platform: ${{ needs.configure_extended_functional_matrix.outputs.platform }}
+      platform: ${{ needs.configure_test_matrix.outputs.platform }}
       component: ${{ toJSON(matrix.components) }}
