Skip opencl-cts on windows

--- a/BUILD_TOPOLOGY.toml
+++ b/BUILD_TOPOLOGY.toml
@@ -458,6 +458,7 @@ type = "target-specific"
 artifact_deps = ["core-ocl"]
 feature_name = "OPENCL_CTS"
 feature_group = "CORE"
+disable_platforms = ["windows"]
 
 [artifacts.core-hipinfo]
 artifact_group = "hip-runtime"
