--- a/.github/workflows/release_portable_linux_jax_wheels.yml
+++ b/.github/workflows/release_portable_linux_jax_wheels.yml
@@ -95,7 +95,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: ["3.11", "3.12", "3.13"]
+        python_version: ["3.11", "3.12"]
         jax_ref: ["rocm-jaxlib-v0.8.0"]
 
     uses: ./.github/workflows/build_linux_jax_wheels.yml
