Integrate hwloc with libpciaccess for rocrtst
- Add hwloc 1.11.13 with PCI support enabled
- Integrates libpciaccess for PCI/GPU device discovery
- SONAME prefixing: librocm_sysdeps_hwloc.so.5
- Symbol versioning: AMDROCM_SYSDEPS_1.0
- Updates rocrtst to use bundled hwloc/numa
- Updates BUILD_TOPOLOGY.toml with hwloc artifact
- hwloc depends on numactl and libpciaccess

--- a/BUILD_TOPOLOGY.toml
+++ b/BUILD_TOPOLOGY.toml
@@ -349,6 +349,13 @@ artifact_deps = []
 feature_group = "CORE"
 disable_platforms = ["windows"]
 
+[artifacts.sysdeps-hwloc]
+artifact_group = "third-party-sysdeps"
+type = "target-neutral"
+artifact_deps = ["sysdeps", "sysdeps-libpciaccess"]  # hwloc depends on numactl (in core sysdeps) and libpciaccess
+feature_group = "CORE"
+disable_platforms = ["windows"]
+
 [artifacts.host-blas]
 artifact_group = "third-party-libs"
 type = "target-neutral"
@@ -443,7 +450,7 @@ feature_group = "CORE"  # Part of core, enabled by default
 [artifacts.rocrtst]
 artifact_group = "rocrtst"
 type = "target-neutral"
-artifact_deps = ["core-runtime", "core-ocl"]
+artifact_deps = ["core-runtime", "core-ocl", "sysdeps-hwloc"]
 feature_name = "CORE_RUNTIME_TESTS"
 feature_group = "CORE"
 disable_platforms = ["windows"]
