Fix built opencl-cts archive content

--- a/BUILD_TOPOLOGY.toml
+++ b/BUILD_TOPOLOGY.toml
@@ -454,7 +454,7 @@ disable_platforms = ["windows"]
 
 [artifacts.opencl-cts]
 artifact_group = "opencl-cts"
-type = "target-specific"
+type = "target-neutral"
 artifact_deps = ["core-ocl"]
 feature_name = "OPENCL_CTS"
 feature_group = "CORE"
