--- a/.github/workflows/release_portable_linux_packages.yml
+++ b/.github/workflows/release_portable_linux_packages.yml
@@ -182,6 +182,8 @@ jobs:
       S3_SUBDIR: ${{ inputs.s3_subdir || 'v2' }}
       S3_STAGING_SUBDIR: ${{ inputs.s3_staging_subdir || 'v2-staging' }}
       MANYLINUX: 1
+      EXTRA_C_COMPILER_LAUNCHER: /therock/src/build_tools/resource_info.py
+      EXTRA_CXX_COMPILER_LAUNCHER: /therock/src/build_tools/resource_info.py
 
     steps:
       - name: "Checking out repository"
