Set correct ICD loader artifact location

--- a/opencl/artifact-opencl-cts.toml
+++ b/opencl/artifact-opencl-cts.toml
@@ -2,5 +2,8 @@
 [components.test."opencl/opencl-cts/stage"]
 include = [
   "bin/**",
-  "lib/**",
+]
+[components.test."opencl/opencl-icd-loader/stage"]
+include = [
+  "lib/*.so*",
 ]
