--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ meson>=1.7.0
 pre-commit>=4.3.0
 psutil>=5.9.0
 python-magic>=0.4.27; platform_system != "Windows"
+wmi; platform_system == "Windows"
 PyYAML==6.0.2
 pyzstd>=0.16.0
 setuptools>=80.9.0
