--- a/.github/workflows/new_ci_weekly.yml
+++ b/.github/workflows/new_ci_weekly.yml
@@ -127,7 +127,7 @@ jobs:
       test_labels: ""
       artifact_run_id: ${{ inputs.artifact_run_id }}
       use_prebuilt_artifacts: ${{ inputs.linux_use_prebuilt_artifacts == true && 'true' || 'false' }}
-      rocm_package_version: "ADHOCBUILD"
+      rocm_package_version: ${{ needs.setup_cmake4.outputs.rocm_package_version }}
       test_type: "smoke"
       container_image: ${{ needs.setup_cmake4.outputs.container_image_linux }}
     permissions:
