--- a/profiler/artifact-rocprofiler-sdk.toml
+++ b/profiler/artifact-rocprofiler-sdk.toml
@@ -30,6 +30,10 @@ include = [
 ]
 [components.test."profiler/rocprofiler-sdk/stage"]
 include = [
+  "bin/**",
+  "share/rocprofiler-sdk/**",
+  "share/rocprofiler-sdk-rocpd/**",
+  "share/rocprofiler-sdk-roctx/**",
   "share/rocprofiler-sdk/tests/**",
   "lib/python*/**",
 ]
