Update amd_smi build dep

--- a/comm-libs/CMakeLists.txt
+++ b/comm-libs/CMakeLists.txt
@@ -34,10 +34,10 @@ if(THEROCK_ENABLE_RCCL AND THEROCK_SANITIZER STREQUAL "")
       rocm-cmake
       therock-fmt
       therock-googletest
+      amd_smi
     RUNTIME_DEPS
       hip-clr
       hipify
-      amd_smi_lib
       rocm_smi_lib
       rocprofiler-register
       ${optional_profiler_deps}
