Fix AOCL-BLAS header installation and dependency ordering
AOCL's build system ignores CMAKE_INSTALL_INCLUDEDIR for headers,
causing them to install to dist/include/ instead of the expected
dist/lib/host-math/include/ location. This commit adds a custom
CMake command to copy headers to the correct location after staging.

Also fixes dependency ordering by moving therock-aocl-blas from
RUNTIME_DEPS to BUILD_DEPS for rocBLAS, since it's a static library
that must be built before rocBLAS links against it.

Changes:
- Add custom command to copy AOCL headers after staging
- Set CMAKE_INSTALL_LIBDIR/BINDIR/INCLUDEDIR for AOCL build
- Move therock-aocl-blas to BUILD_DEPS for proper build ordering
- Update library validation path to match new location

--- a/math-libs/BLAS/CMakeLists.txt
+++ b/math-libs/BLAS/CMakeLists.txt
@@ -173,6 +173,12 @@ if(THEROCK_BUILD_TESTING)
   list(APPEND rocBLAS_optional_runtime_deps therock-aocl-blas)       # AOCL-BLAS
 endif()
 
+# AOCL-BLAS is a static library that must be built before rocBLAS links against it
+set(rocBLAS_optional_build_deps)
+if(THEROCK_BUILD_TESTING)
+  list(APPEND rocBLAS_optional_build_deps therock-aocl-blas)
+endif()
+
 therock_cmake_subproject_declare(rocBLAS
   EXTERNAL_SOURCE_DIR "${THEROCK_ROCM_LIBRARIES_SOURCE_DIR}/projects/rocblas"
   BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/rocBLAS"
@@ -201,6 +207,7 @@ therock_cmake_subproject_declare(rocBLAS
     rocm-cmake
     therock-googletest
     therock-msgpack-cxx
+    ${rocBLAS_optional_build_deps}
   RUNTIME_DEPS
     hip-clr
     hipBLASLt
