--- a/.github/actions/setup_test_environment/action.yml
+++ b/.github/actions/setup_test_environment/action.yml
@@ -87,6 +87,7 @@ runs:
       env:
         OUTPUT_ARTIFACTS_DIR: ${{ inputs.OUTPUT_ARTIFACTS_DIR }}
       run: |
+        sed -i "s/pandas>=1.4.3/pandas==2.3.3/g" ${OUTPUT_ARTIFACTS_DIR}/libexec/rocprofiler-compute/requirements.txt
         uv pip install -r ${OUTPUT_ARTIFACTS_DIR}/libexec/rocprofiler-compute/requirements.txt
         uv pip install -r ${OUTPUT_ARTIFACTS_DIR}/libexec/rocprofiler-compute/requirements-test.txt
         uv pip freeze
