--- a/math-libs/BLAS/CMakeLists.txt
+++ b/math-libs/BLAS/CMakeLists.txt
@@ -188,6 +188,7 @@ therock_cmake_subproject_declare(rocBLAS
     -DTENSILE_VERSION=
     -DBUILD_CLIENTS_TESTS=${THEROCK_BUILD_TESTING}
     -DBUILD_CLIENTS_BENCHMARKS=${THEROCK_BUILD_TESTING}
+    -DBUILD_CLIENTS_SAMPLES=${THEROCK_BUILD_TESTING}
     -DLINK_BLIS=OFF
   CMAKE_INCLUDES
     therock_explicit_finders.cmake
