adjust build_native_linux_packages to run from outside the rock, remove triggering jax workflow.

--- a/.github/workflows/build_native_linux_packages.yml
+++ b/.github/workflows/build_native_linux_packages.yml
@@ -55,6 +55,12 @@ on:
         description: The type of release to build ("dev", "nightly", or "prerelease"). All developer-triggered jobs should use "dev"!
         type: string
         default: "dev"
+      repository:
+          description: "Repository to checkout. Otherwise, defaults to `github.repository`."
+          type: string
+      ref:
+          description: "Branch, tag or SHA to checkout. Defaults to the reference or SHA that triggered the workflow."
+          type: string
 
 permissions:
   id-token: write
@@ -78,10 +84,17 @@ jobs:
       RELEASE_TYPE: ${{ inputs.release_type || '' }}
       S3_BUCKET_NATIVE: "therock-${{ inputs.release_type }}-packages"
     steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-      - uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548 # v6.1.0
+      - name: "Checking out repository"
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        with:
+          repository: ${{ inputs.repository || github.repository }}
+          ref: ${{ inputs.ref || '' }}
+
+      - name: Set up Python 3.12
+        uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548 # v6.1.0
         with:
           python-version: '3.12'
+
       - name: Install Python requirements
         run: |
           pip install pyelftools boto3 jinja2
@@ -100,7 +113,7 @@ jobs:
           echo "Fetching artifacts for build ${{ inputs.artifact_run_id }}"
           python ./build_tools/fetch_artifacts.py \
             --run-id=${{ env.ARTIFACT_RUN_ID }} \
-            --run-github-repo="ROCm/TheRock" \
+            --run-github-repo=${{ inputs.repository || 'ROCm/TheRock' }} \
             --artifact-group=${{ inputs.artifact_group }} \
             --output-dir=${{ env.ARTIFACTS_DIR }}
 
