Create an intentional build error to test grace termination
Signed-off-by: dezhliao <dezhi.liao@amd.com>

--- a/.github/workflows/build_windows_artifacts.yml
+++ b/.github/workflows/build_windows_artifacts.yml
@@ -160,10 +160,9 @@ jobs:
         run: |
           MONITOR_PID=$(bash build_tools/github_actions/start_memory_monitor.sh)
           export MONITOR_PID
+          trap 'bash build_tools/github_actions/stop_memory_monitor.sh || true' EXIT
 
           cmake --build "${{ env.BUILD_DIR }}" --target therock-archives therock-dist -- -k 0
-
-          bash build_tools/github_actions/stop_memory_monitor.sh
 
       - name: Report
         if: ${{ !cancelled() }}
