Address Copilot review feedback
Fixes all 8 issues raised by Copilot PR review:

1. validate_static_library.py: Filter empty strings when counting object files
2. validate_static_library.py: Fail validation if archive is empty (0 objects) or 0 MB
3. therock_testing.cmake: Skip static lib validation in sanitizer builds (matches shared lib)
4. aocl-config.cmake.in: Clarify OpenMP is needed for multithreaded AOCL-BLAS
5. aocl/CMakeLists.txt: Replace local path with public GitHub URL reference
6. BLAS/CMakeLists.txt: Add Tensile cleanup to clean target (not just expunge)
7. aocl/CMakeLists.txt: Clarify OpenMP comment - AOCL manages discovery internally
8. aocl/CMakeLists.txt: Add verification for install-time GLOB, fail if no headers found

--- a/math-libs/BLAS/CMakeLists.txt
+++ b/math-libs/BLAS/CMakeLists.txt
@@ -235,6 +235,7 @@ add_custom_target(rocBLAS+expunge-tensile
   COMMENT "Cleaning Tensile build artifacts"
 )
 add_dependencies(rocBLAS+expunge rocBLAS+expunge-tensile)
+add_dependencies(rocBLAS+clean rocBLAS+expunge-tensile)
 
 
 if(THEROCK_ENABLE_SPARSE)
