Fix Windows build - exclude AOCL-BLAS dependencies on Windows
AOCL-BLAS is disabled on Windows (disable_platforms = ["windows"])
so we should not add it as a dependency for rocBLAS on Windows.

Windows builds will continue to use only OpenBLAS as the CPU
reference BLAS for rocBLAS clients/tests.

--- a/math-libs/BLAS/CMakeLists.txt
+++ b/math-libs/BLAS/CMakeLists.txt
@@ -170,12 +170,15 @@ endif()
 if(THEROCK_BUILD_TESTING)
   # CPU reference BLAS libraries for rocBLAS clients/tests
   list(APPEND rocBLAS_optional_runtime_deps therock-host-blas)       # OpenBLAS
-  list(APPEND rocBLAS_optional_runtime_deps therock-aocl-blas)       # AOCL-BLAS
+  if(NOT WIN32)
+    # AOCL-BLAS is Linux-only (Windows continues to use OpenBLAS)
+    list(APPEND rocBLAS_optional_runtime_deps therock-aocl-blas)     # AOCL-BLAS
+  endif()
 endif()
 
 # AOCL-BLAS is a static library that must be built before rocBLAS links against it
 set(rocBLAS_optional_build_deps)
-if(THEROCK_BUILD_TESTING)
+if(THEROCK_BUILD_TESTING AND NOT WIN32)
   list(APPEND rocBLAS_optional_build_deps therock-aocl-blas)
 endif()
 
